...

    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="vegetarian_lunch">Vegetarian Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="vegetarian_dinner">Vegetarian Dinner</string>
    <string name="both">Lunch and Dinner</string>

    <string name="empty_dishes">No dishes</string>
    <string name="rate_app">Rate this app</string>
    <string name="visit_website">Visit Website</string>
    <string name="no_university_website">No university to show website</string>
    <string name="university_no_website">This university does not have a website</string>
    <string name="campus">Campus</string>
    <string name="refresh_all">Refresh all universities</string>
...
